<resources>
    <string name="app_name">Aplikasi Project UTS Aldi</string>
    <string name="bangun_datar">bangun datar</string>
    <string name="hitung">hitung</string>
    <string name="about_me">about me</string>
    <string name="dibuat_oleh_aldi">Dibuat Oleh Aldi</string>
    <string name="todo">todo</string>
    <string name="bangun_ruang">bangun ruang</string>
    <string name="balok">balok</string>
    <string name="kubus">kubus</string>
    <string name="kerucut">kerucut</string>
    <string name="button_dengan_gambar_latar">Button dengan gambar latar</string>
    <string name="volume">volume</string>
    <string name="selimut">selimut</string>
    <string name="back">back</string>
    <string name="Volume">Volume</string>
    <string name="Selimut">Selimut</string>
    <string name="Back">Back</string>
    <string name="selimut_balok">Selimut Balok</string>
    <string name="selimut_kerucut">Selimut Kerucut</string>
    <string name="selimut_kubus">Selimut Kubus</string>
    <string name="volume_balok">Volume Balok</string>
    <string name="volume_kerucut">Volume Kerucut</string>
    <string name="volume_kubus">Volume Kubus</string>
    <string name="manajemen_informatika_d3">manajemen informatika D3 2019</string>
    <string name="exit">Exit</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung_nluas">Hitung Volume</string>
    <string name="tinggi">Tinggi</string>
    <string name="hasil">Hasil</string>
    <string name="menghitung_volume_balok">Menghitung Volume Balok</string>
    <string name="angka">Masukan Angka</string>
    <string name="menghitung_volume_kerucut">Menghitung Volume Kerucut</string>
    <string name="jari_jari">Jari-Jari</string>
    <string name="sisi">Sisi</string>
    <string name="todoo">TODO</string>
    <string name="menghitung_selimut_kubus">Menghitung Selimut Kubus</string>
    <string name="hitung_selimut">Hitung Selimut</string>
    <string name="menghitung_selimut_balok">Menghitung Selimut Balok</string>
    <string name="panjang_garis_pelukis">Panjang Garis Pelukis</string>
    <string name="menghitung_selimut_kerucut">Menghitung Selimut Kerucut</string>
</resources>
