<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/menghitung_volume_balok"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/kubus"
        android:contentDescription="@string/todoo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sisi"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_sisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/angka"
        android:importantForAutofill="no" tools:targetApi="o" />

    <Button
        android:id="@+id/btn_hitung_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/hitung_nluas"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txt_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/hasil"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>