<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kubus"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:background="#3F51B5"
        android:drawableStart="@drawable/hitung"
        android:text="@string/Volume"
        android:textColor="#fff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:layout_marginTop="250dp"
        android:text="@string/Selimut"
        android:drawableStart="@drawable/hitung"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="#3F51B5"
        android:drawableStart="@drawable/goback"
        android:text="@string/Back"
        android:textColor="#fff"
        android:textSize="24sp" />


</RelativeLayout>
